Download Projects/ssu_score/#P1_20142468_v1.0/소스코드/ERR/20190008/13_error.txt
../../STD_DIR/20190008/13.c: In function 'ssu_signal_handler':
../../STD_DIR/20190008/13.c:8:1: error: parameter 'count' is initialized
 int count = 0;
 ^~~
../../STD_DIR/20190008/13.c:11:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 {
 ^
../../STD_DIR/20190008/13.c:28:36: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 void ssu_signal_handler(int signo) {
                                    ^
../../STD_DIR/20190008/13.c:6:6: error: old-style parameter declarations in prototyped function definition
 void ssu_signal_handler(int signo)
      ^~~~~~~~~~~~~~~~~~
../../STD_DIR/20190008/13.c:32:1: error: expected '{' at end of input
 }
 ^
sh: 1: ./13.stdexe: not found
